force-app/main/default/objects/ServiceAppointment__c/ServiceAppointment__c.object-meta.xml
<CustomObject>
    <label>Service Appointment</label>
    <pluralLabel>Service Appointments</pluralLabel>
    <nameField>
        <label>Appointment Name</label>
        <type>AutoNumber</type>
        <displayFormat>SA-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>차량 A/S 예약 및 처리 이력을 관리하는 오브젝트</description>
</CustomObject>