force-app/main/default/objects/ServiceAppointment__c/fields/AppointmentDate__c.field-meta.xml
<CustomField>
    <fullName>AppointmentDate__c</fullName>
    <label>예약일</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>