force-app/main/default/objects/ServiceAppointment__c/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <label>입고 당시 주행거리 (km)</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>