force-app/main/default/objects/ServiceAppointment__c/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <label>서비스 유형</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>정기점검</fullName><default>true</default><label>정기점검</label></value>
            <value><fullName>엔진오일 교환</fullName><default>false</default><label>엔진오일 교환</label></value>
            <value><fullName>타이어 교체</fullName><default>false</default><label>타이어 교체</label></value>
            <value><fullName>사고 수리</fullName><default>false</default><label>사고 수리</label></value>
            <value><fullName>기타</fullName><default>false</default><label>기타</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>