force-app/main/default/objects/ServiceAppointment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>처리 상태</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>예약</fullName><default>true</default><label>예약</label></value>
            <value><fullName>진행중</fullName><default>false</default><label>진행중</label></value>
            <value><fullName>완료</fullName><default>false</default><label>완료</label></value>
            <value><fullName>취소</fullName><default>false</default><label>취소</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>