force-app/main/default/objects/ServiceAppointment__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <label>담당 기술자</label>
    <type>Text</type>
    <length>100</length>
</CustomField>