force-app/main/default/objects/ServiceAppointment__c/fields/VehicleId__c.field-meta.xml
<CustomField>
    <fullName>VehicleId__c</fullName>
    <label>차량</label>
    <type>Lookup</type>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipName>ServiceAppointments</relationshipName>
    <relationshipLabel>A/S 예약 목록</relationshipLabel>
</CustomField>